--- a/index.html
+++ b/index.html
@@ -22,9 +22,36 @@
     <meta property="twitter:title" content="Floating World" />
     <meta property="twitter:description" content="Monthly web maintenance packages for businesses. Cancel anytime" />
     <meta property="twitter:image" content="https://floating-world.vercel.app/meta-img.png" />
+
+    <style type="text/tailwindcss">
+        @theme{
+            --breakpoint-lg:1025px;
+            --breakpoint-md:770px;
+            --color-sky:#00AFE1;
+            --color-gray:#393939;
+        }
+        </style>
     
 </head>
 <body>
-    <h1 class="text-4xl font-bold">hello</h1>
+    <!-- hero -->
+
+    <a href="/" class="max-w-max mx-auto pt-5 pb-[18px] flex">
+        <img src="/assets/images/png/logo.png" alt="logo" class="h-[53px] max-md:h-12 max-sm:h-10 ma pointer-events-none">
+    </a>
+    <section class="bg-sky pt-[134px] pb-[117px] relative max-lg:py-20 max-sm:pb-12">
+        <div class="max-w-[1522px] mx-auto px-4">
+            <h1 class="font-bold text-[100px] max-lg:text-7xl max-md:text-5xl max-lg:max-w-[440px] max-lg:leading-[100%] leading-[104px] max-w-[820px] text-center mx-auto text-white z-30 relative">Scale & grow with ease</h1>
+            <p class="font-medium text-[26px] max-md:text-xl max-sm:text-lg leading-[110%] text-center text-white pt-[13px] pb-10 max-md:pb-7 max-sm:pb-5 z-30 relative">Monthly web maintenance packages for businesses. Cancel anytime</p>
+            <button class="border border-black rounded-[14px] bg-gradient-to-b from-black to-gray font-bold text-xl max-md:text-base max-md:px-8 max-md:py-4 max-sm:py-3 leading-[100%] text-white px-[48.9px] py-[22.7px] mx-auto flex cursor-pointer">See Plans</button>
+            <div class="flex items-center justify-center gap-[13px] pt-[21px]">
+                <span class="flex size-3 rounded-full bg-red-600"></span>
+                <p class="font-medium text-xs leading-[100%] text-white">Available now</p>
+            </div>
+        </div>
+        <img src="/assets/images/png/gear.png" alt="gear" class="size-[170px] z-20 absolute gear top-[20%] max-lg:top-10 max-xl:left-3 max-lg:size-32 max-md:size-20 left-40 max-sm:left-1/2 max-sm:-translate-x-1/2 max-sm:size-16 max-sm:top-3">
+        <img src="/assets/images/png/hero-left.png" alt="hero-left" class="w-[289px] h-[350px] max-xl:hidden absolute top-[34%] z-10">
+        <img src="/assets/images/png/hero-right.png" alt="hero-right" class="w-[400px] h-[300px] max-xl:hidden absolute top-[30%] right-0 z-10 pointer-events-none">
+    </section>
 </body>
 </html>
