--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,7 @@
     <meta property="og:title" content="Floating World" />
     <meta property="og:description" content="Monthly web maintenance packages for businesses. Cancel anytime" />
     <meta property="og:image" content="https://floating-world.vercel.app/meta-img.png" />
-    
+
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://floating-world.vercel.app/" />
     <meta property="twitter:title" content="Floating World" />
@@ -31,27 +32,79 @@
             --color-gray:#393939;
         }
         </style>
-    
+
 </head>
+
 <body>
     <!-- hero -->
 
     <a href="/" class="max-w-max mx-auto pt-5 pb-[18px] flex">
-        <img src="/assets/images/png/logo.png" alt="logo" class="h-[53px] max-md:h-12 max-sm:h-10 ma pointer-events-none">
+        <img src="/assets/images/png/logo.png" alt="logo"
+            class="h-[53px] max-md:h-12 max-sm:h-10 ma pointer-events-none">
     </a>
     <section class="bg-sky pt-[134px] pb-[117px] relative max-lg:py-20 max-sm:pb-12">
         <div class="max-w-[1522px] mx-auto px-4">
-            <h1 class="font-bold text-[100px] max-lg:text-7xl max-md:text-5xl max-lg:max-w-[440px] max-lg:leading-[100%] leading-[104px] max-w-[820px] text-center mx-auto text-white z-30 relative">Scale & grow with ease</h1>
-            <p class="font-medium text-[26px] max-md:text-xl max-sm:text-lg leading-[110%] text-center text-white pt-[13px] pb-10 max-md:pb-7 max-sm:pb-5 z-30 relative">Monthly web maintenance packages for businesses. Cancel anytime</p>
-            <button class="border border-black rounded-[14px] bg-gradient-to-b from-black to-gray font-bold text-xl max-md:text-base max-md:px-8 max-md:py-4 max-sm:py-3 leading-[100%] text-white px-[48.9px] py-[22.7px] mx-auto flex cursor-pointer">See Plans</button>
+            <h1
+                class="font-bold text-[100px] max-lg:text-7xl max-md:text-5xl max-lg:max-w-[440px] max-lg:leading-[100%] leading-[104px] max-w-[820px] text-center mx-auto text-white z-30 relative">
+                Scale & grow with ease</h1>
+            <p
+                class="font-medium text-[26px] max-md:text-xl max-sm:text-lg leading-[110%] text-center text-white pt-[13px] pb-10 max-md:pb-7 max-sm:pb-5 z-30 relative">
+                Monthly web maintenance packages for businesses. Cancel anytime</p>
+            <button
+                class="border border-black rounded-[14px] bg-gradient-to-b from-black to-gray font-bold text-xl max-md:text-base max-md:px-8 max-md:py-4 max-sm:py-3 leading-[100%] text-white px-[48.9px] py-[22.7px] mx-auto flex cursor-pointer">See
+                Plans</button>
             <div class="flex items-center justify-center gap-[13px] pt-[21px]">
                 <span class="flex size-3 rounded-full bg-red-600"></span>
                 <p class="font-medium text-xs leading-[100%] text-white">Available now</p>
             </div>
         </div>
-        <img src="/assets/images/png/gear.png" alt="gear" class="size-[170px] z-20 absolute gear top-[20%] max-lg:top-10 max-xl:left-3 max-lg:size-32 max-md:size-20 left-40 max-sm:left-1/2 max-sm:-translate-x-1/2 max-sm:size-16 max-sm:top-3">
-        <img src="/assets/images/png/hero-left.png" alt="hero-left" class="w-[289px] h-[350px] max-xl:hidden absolute top-[34%] z-10">
-        <img src="/assets/images/png/hero-right.png" alt="hero-right" class="w-[400px] h-[300px] max-xl:hidden absolute top-[30%] right-0 z-10 pointer-events-none">
+        <img src="/assets/images/png/gear.png" alt="gear"
+            class="size-[170px] pointer-events-none z-20 absolute gear top-[20%] max-lg:top-10 max-xl:left-3 max-lg:size-32 max-md:size-20 left-40 max-sm:left-1/2 max-sm:-translate-x-1/2 max-sm:size-16 max-sm:top-3">
+        <img src="/assets/images/png/hero-left.png" alt="hero-left"
+            class="w-[289px] h-[350px] max-xl:hidden absolute top-[34%] z-10">
+        <img src="/assets/images/png/hero-right.png" alt="hero-right"
+            class="w-[400px] h-[300px] max-xl:hidden absolute top-[30%] right-0 z-10 pointer-events-none">
     </section>
+
+    <!-- logos -->
+
+    <section class="overflow-hidden pt-[19px] pb-[13px]">
+        <div class="flex items-center marquee">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/afar.png" alt="afar" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/cansel.png" alt="cansel" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/cpc.png" alt="cpc" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/doctor-decisions.png" alt="doctor-decisions"
+                class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/earls.png" alt="earls" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/learning-mate.png" alt="learning-mate" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/efw.png" alt="efw" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+            <img src="/assets/images/png/trading-desk.png" alt="trading-desk" class="h-[95px] pointer-events-none">
+            <span class="flex h-[9.7px] min-w-[9.7px] rotate-45 animate-spin bg-sky"></span>
+        </div>
+    </section>
+
+    <!-- navbar -->
+
+    <div class="px-4">
+        <div class="max-w-[644px] mx-auto bg-gradient-to-b from-black to-gray rounded-[86px] flex items-center pr-[58px] pl-[11px] py-[11px] justify-between border-2 border-black fixed bottom-3 z-50 left-1/2 -translate-x-1/2 w-full">
+            <a href="/" class="flex items-center justify-center bg-white rounded-full size-[65px]"><img src="/assets/images/png/favicon.png" alt="favicon" class="pointer-events-none h-11 w-[42px]"></a>
+            <ul class="flex gap-[39px]">
+                <li><a href="#works" class="font-medium text-base leading-[100%] text-white">How it works</a></li>
+                <li><a href="#benefits" class="font-medium text-base leading-[100%] text-white">Benefits</a></li>
+                <li><a href="#services" class="font-medium text-base leading-[100%] text-white">Services</a></li>
+                <li><a href="#pricing" class="font-medium text-base leading-[100%] text-white">Pricing</a></li>
+                <li><a href="#faq" class="font-medium text-base leading-[100%] text-white">FAQs</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
