--- a/index.html
+++ b/index.html
@@ -93,18 +93,74 @@
 
     <!-- navbar -->
 
-    <div class="px-4">
-        <div class="max-w-[644px] mx-auto bg-gradient-to-b from-black to-gray rounded-[86px] flex items-center pr-[58px] pl-[11px] py-[11px] justify-between border-2 border-black fixed bottom-3 z-50 left-1/2 -translate-x-1/2 w-full">
-            <a href="/" class="flex items-center justify-center bg-white rounded-full size-[65px]"><img src="/assets/images/png/favicon.png" alt="favicon" class="pointer-events-none h-11 w-[42px]"></a>
-            <ul class="flex gap-[39px]">
-                <li><a href="#works" class="font-medium text-base leading-[100%] text-white">How it works</a></li>
-                <li><a href="#benefits" class="font-medium text-base leading-[100%] text-white">Benefits</a></li>
-                <li><a href="#services" class="font-medium text-base leading-[100%] text-white">Services</a></li>
-                <li><a href="#pricing" class="font-medium text-base leading-[100%] text-white">Pricing</a></li>
-                <li><a href="#faq" class="font-medium text-base leading-[100%] text-white">FAQs</a></li>
+    <div class="px-3">
+        <div
+            class="max-w-[644px] mx-auto bg-gradient-to-b from-black to-gray rounded-[86px] flex items-center max-sm:pr-3 max-sm:pl-2 max-md:py-2 pr-[58px] pl-[11px] py-[11px] justify-between border-2 border-black fixed bottom-3 z-50 left-1/2 -translate-x-1/2 max-sm:max-w-[350px] w-full">
+            <a href="/" class="flex items-center justify-center bg-white rounded-full size-[65px] max-sm:size-9"><img
+                    src="/assets/images/png/favicon.png" alt="favicon"
+                    class="pointer-events-none h-11 w-[42px] max-sm:size-7"></a>
+            <ul class="flex gap-[39px] max-md:gap-7 max-sm:gap-[10px]">
+                <li><a href="#works" class="font-medium text-base max-sm:text-xs leading-[100%] text-white">How it
+                        works</a></li>
+                <li><a href="#benefits"
+                        class="font-medium text-base max-sm:text-xs leading-[100%] text-white">Benefits</a></li>
+                <li><a href="#services"
+                        class="font-medium text-base max-sm:text-xs leading-[100%] text-white">Services</a></li>
+                <li><a href="#pricing"
+                        class="font-medium text-base max-sm:text-xs leading-[100%] text-white">Pricing</a></li>
+                <li><a href="#faq" class="font-medium text-base max-sm:text-xs leading-[100%] text-white">FAQs</a></li>
             </ul>
         </div>
     </div>
+
+    <!-- latest projects -->
+
+    <section class="pt-24">
+        <marquee>
+            <div class="flex items-center gap-[31px]">
+                <div
+                    class="relative rounded-3xl min-w-[476px] max-md:min-w-96 max-md:h-96 h-[476px] max-sm:min-w-64 max-sm:h-72 overflow-hidden flex flex-col items-end justify-end">
+                    <img src="/assets/images/webp/simply.webp" alt="simply" class="absolute w-full h-full">
+                    <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                        <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">Project Name
+                        </p>
+                        <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">Launch
+                            Date</p>
+                    </div>
+                </div>
+                <div
+                    class="relative rounded-3xl min-w-[476px] max-md:min-w-96 max-md:h-96 h-[476px] max-sm:min-w-64 max-sm:h-72 overflow-hidden flex flex-col items-end justify-end">
+                    <img src="/assets/images/webp/mike-newsletter.webp" alt="mike-newsletter" class="absolute w-full h-full">
+                    <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                        <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">Project Name
+                        </p>
+                        <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">Launch
+                            Date</p>
+                    </div>
+                </div>
+                <div
+                    class="relative rounded-3xl min-w-[476px] max-md:min-w-96 max-md:h-96 h-[476px] max-sm:min-w-64 max-sm:h-72 overflow-hidden flex flex-col items-end justify-end">
+                    <img src="/assets/images/webp/queen.webp" alt="queen" class="absolute w-full h-full">
+                    <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                        <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">Project Name
+                        </p>
+                        <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">Launch
+                            Date</p>
+                    </div>
+                </div>
+                <div
+                    class="relative rounded-3xl min-w-[476px] max-md:min-w-96 max-md:h-96 h-[476px] max-sm:min-w-64 max-sm:h-72 overflow-hidden flex flex-col items-end justify-end">
+                    <img src="/assets/images/webp/snow-mountain.webp" alt="snow-mountain" class="absolute w-full h-full">
+                    <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                        <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">Project Name
+                        </p>
+                        <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">Launch
+                            Date</p>
+                    </div>
+                </div>
+            </div>
+        </marquee>
+    </section>
 </body>
 
 </html>
