tabs in progress

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 
 <body class="bg-offWhite">
     <!-- hero -->
-
-    <a href="/" class="max-w-max mx-auto pt-5 pb-[18px] flex">
-        <img src="/assets/images/png/logo.png" alt="logo"
-            class="h-[53px] max-md:h-12 max-sm:h-10 ma pointer-events-none">
-    </a>
+    <div class="bg-white pt-5 pb-[18px]">
+        <a href="/" class="max-w-max mx-auto flex">
+            <img src="/assets/images/png/logo.png" alt="logo"
+                class="h-[53px] max-md:h-12 max-sm:h-10 ma pointer-events-none">
+        </a>
+    </div>
     <section class="bg-sky pt-[134px] pb-[117px] relative max-lg:py-20 max-sm:pb-12">
         <div class="max-w-[1522px] mx-auto px-4">
             <h1
@@ -289,7 +290,7 @@
                 Expert Website Scaling,
                 Maintenance, & AI Integration</p>
             <div class="flex flex-wrap -mx-3 pt-[69px] max-md:pt-12 max-sm:pt-9 pb-[78px] max-md:pb-12 max-sm:pb-8">
-                <div class="w-1/3 px-3 max-sm:w-full px-3">
+                <div class="w-1/3 px-3 max-sm:w-full">
                     <div class="flex flex-col items-center justify-center">
                         <svg class="max-lg:h-24 max-md:h-20" width="132" height="132" viewBox="0 0 132 132" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -456,11 +457,11 @@
                                 HighPCI.com</p>
                         </div>
                         <div class="relative">
-                            <img src="/assets/images/webp/grant.webp" alt="grant" class="h-[285px] max-sm:h-44">
+                            <img src="/assets/images/webp/grant.webp" alt="grant" class="h-[285px] max-sm:h-44 pointer-events-none">
                             <img src="/assets/images/png/triangle.png" alt="triangle"
-                                class="h-[127px] max-sm:h-20 absolute top-20 -left-16 max-sm:top-12 max-sm:-left-11">
+                                class="h-[127px] max-sm:h-20 absolute top-20 -left-16 max-sm:top-12 max-sm:-left-11 pointer-events-none">
                             <img src="/assets/images/png/lines.png" alt="lines"
-                                class="h-[60.58px] max-sm:h-8 sm:w-[149px] absolute top-[104px] -left-7 max-sm:top-20 max-sm:-left-4">
+                                class="h-[60.58px] max-sm:h-8 sm:w-[149px] absolute top-[104px] -left-7 max-sm:top-20 max-sm:-left-4 pointer-events-none">
                         </div>
                     </div>
                 </div>
@@ -619,7 +620,198 @@
 
     <!-- app web -->
 
-    
+    <section class="pt-[212px] pb-[129px] max-lg:py-20 max-md:py-12 bg-white">
+        <div class="max-w-[1522px] mx-auto px-4">
+            <h2
+                class="font-extrabold text-[67px] max-lg:text-6xl max-md:text-5xl max-sm:text-4xl max-lg:leading-[100%] leading-[77px] mx-auto text-center text-black">
+                App, web, & AI coding
+            </h2>
+            <div class="flex flex-wrap items-center gap-3 justify-center pt-[63px] max-sm:pt-10 max-w-[953px] mx-auto">
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Mobile Apps</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">AI</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Plugin Coding</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Web Coding</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Server-side</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Security</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Backups</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Management</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Wordpress</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Laravel</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Integrations</button>
+                <button class="bg-sky py-[18.5px] cursor-pointer max-md:text-sm max-md:px-6 max-md:py-4 max-sm:text-xs max-sm:px-4 max-sm:py-3 px-7 font-semibold text-base leading-[100%] text-white transition-all duration-300 hover:bg-black rounded-full">Speed Optimization</button>
+            </div>
+            <div class="flex flex-wrap -mx-3 pt-[100px] max-md:pt-20 max-sm:pt-16 justify-center">
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/simply.webp" alt="simply" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 max-sm:pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/mike-newsletter.webp" alt="mike-newsletter" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 max-md:pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/queen.webp" alt="queen" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/snow-mountain.webp" alt="snow-mountain" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/building.webp" alt="building" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/glass.webp" alt="glass" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/doctor.webp" alt="doctor" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/girl-with-book.webp" alt="girl-with-book" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/athlete.webp" alt="athlete" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/motherboard.webp" alt="motherboard" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 max-md:w-1/2 max-sm:w-full px-3 pt-[33px]">
+                    <div
+                        class="relative rounded-3xl max-w-[476px] max-md:max-w-96 max-xl:h-80 max-md:!h-72 h-[476px] max-sm:w-full max-sm:h-72 max-sm:mx-auto overflow-hidden flex flex-col items-end justify-end">
+                        <img src="/assets/images/webp/city.webp" alt="city" class="absolute object-cover max-sm:mx-auto w-full h-full">
+                        <div class="relative bg-black/50 w-full pt-6 pl-9 pb-[35px] max-md:p-6 max-sm:p-4">
+                            <p class="font-bold text-[22px] max-md:text-xl max-sm:text-lg leading-[100%] text-white">
+                                Project
+                                Name
+                            </p>
+                            <p class="font-medium pt-[6px] text-lg max-md:text-base max-sm:text-sm leading-[100%] text-white">
+                                Launch
+                                Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button
+                class="border border-black rounded-[14px] bg-gradient-to-b from-black to-gray font-bold text-xl max-md:text-base max-md:px-8 max-md:py-4 max-sm:py-3 leading-[100%] text-white px-[45.1px] py-[22.7px] mx-auto flex cursor-pointer mt-[77px] max-md:mt-12">Download Case Studies</button>
+        </div>
+    </section>
+
 
     <script>
         const swiper = new Swiper('.swiper', {
@@ -677,6 +869,7 @@
                 }
             }
         });
+        
     </script>
 </body>
 
