--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
     <!-- web support -->
 
-    <section class="pt-[138px] max-lg:pt-20 max-md:pt-12 pb-[151px] max-lg:pb-20 max-md:pb-12">
+    <section id="works" class="pt-[138px] max-lg:pt-20 max-md:pt-12 pb-[151px] max-lg:pb-20 max-md:pb-12">
         <div class="max-w-[1522px] mx-auto px-4">
             <h2
                 class="font-extrabold text-[67px] max-lg:text-6xl max-md:text-5xl max-sm:text-4xl max-lg:leading-[100%] leading-[77px] max-w-[880px] mx-auto text-center text-black">
@@ -496,7 +496,7 @@
 
     <!-- membership -->
 
-    <section class="pt-[131px] pb-[123px] max-lg:py-20 max-md:py-12">
+    <section id="benefits" class="pt-[131px] pb-[123px] max-lg:py-20 max-md:py-12">
         <div class="max-w-[1522px] mx-auto px-4">
             <h2
                 class="font-extrabold text-[67px] max-lg:text-6xl max-md:text-5xl max-sm:text-4xl max-lg:leading-[100%] leading-[77px] mx-auto text-center text-black">
@@ -633,7 +633,7 @@
 
     <!-- app web -->
 
-    <section class="pt-[212px] pb-[129px] max-lg:py-20 max-md:py-12 bg-white">
+    <section id="services" class="pt-[212px] pb-[129px] max-lg:py-20 max-md:py-12 bg-white">
         <div class="max-w-[1522px] mx-auto px-4">
             <h2
                 class="font-extrabold text-[67px] max-lg:text-6xl max-md:text-5xl max-sm:text-4xl max-lg:leading-[100%] leading-[77px] mx-auto text-center text-black">
@@ -866,9 +866,9 @@
 
     <!-- join floatig world -->
 
-    <section class="pt-[261px] pb-[189px] max-lg:py-20 max-md:py-12 relative overflow-hidden">
+    <section id="pricing" class="pt-[261px] pb-[189px] max-lg:py-20 max-md:py-12 relative overflow-hidden">
         <div class="max-w-[1522px] mx-auto px-4">
-            <img src="/assets/images/png/round.png" alt="round" class="absolute h-[595px] max-lg:h-[400px] max-md:h-64 max-sm:h-40 opacity-20 top-20 gear right-[2%] max-lg:-top-1 max-2xl:-right-[13%]">
+            <img src="/assets/images/png/round.png" alt="round" class="absolute h-[595px] max-lg:h-[400px] max-md:h-64 max-sm:h-40 opacity-20 top-20 gear right-[2%] max-lg:-top-1 max-2xl:-right-[13%] pointer-events-none">
             <div class="flex max-lg:flex-wrap -mx-4 relative">
                 <div class="w-[476px] px-4 max-lg:w-full">
                     <div
@@ -967,6 +967,30 @@
             </div>
         </div>
     </section>
+
+    <!-- footer -->
+
+    <footer class="pt-[250px] pb-[263px] max-lg:py-20 max-md:py-12 px-4">
+        <a href="/" class="font-bold text-[103px] max-lg:text-[80px] max-md:text-6xl max-sm:text-4xl leading-[82px] max-lg:leading-[100%] max-w-max mx-auto flex">Floatingworld Inc.™ </a>
+        <ul class="flex gap-[63px] max-md:gap-7 max-sm:gap-4 pt-[83px] max-lg:pt-16 max-md:pt-8 max-sm:pt-4 justify-center">
+            <li><a href="#works"
+                    class="font-medium transition-all duration-300 hover:text-sky text-lg max-sm:text-xs leading-[100%] text-black">How
+                    it
+                    works</a></li>
+            <li><a href="#benefits"
+                    class="font-medium transition-all duration-300 hover:text-sky text-lg max-sm:text-xs leading-[100%] text-black">Benefits</a>
+            </li>
+            <li><a href="#services"
+                    class="font-medium transition-all duration-300 hover:text-sky text-lg max-sm:text-xs leading-[100%] text-black">Services</a>
+            </li>
+            <li><a href="#pricing"
+                    class="font-medium transition-all duration-300 hover:text-sky text-lg max-sm:text-xs leading-[100%] text-black">Pricing</a>
+            </li>
+            <li><a href="#faq"
+                    class="font-medium transition-all duration-300 hover:text-sky text-lg max-sm:text-xs leading-[100%] text-black">FAQs</a>
+            </li>
+        </ul>
+    </footer>
 
     <script>
         const swiper = new Swiper('.swiper', {
