add pointer none

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <img src="/assets/images/png/gear.png" alt="gear"
             class="size-[170px] pointer-events-none z-20 absolute gear top-[20%] max-lg:top-10 max-xl:left-3 max-lg:size-32 max-md:size-20 left-40 max-sm:left-1/2 max-sm:-translate-x-1/2 max-sm:size-16 max-sm:top-3">
         <img src="/assets/images/png/hero-left.png" alt="hero-left"
-            class="w-[289px] h-[350px] max-xl:hidden absolute top-[34%] z-10">
+            class="w-[289px] h-[350px] max-xl:hidden absolute top-[34%] z-10 pointer-events-none">
         <img src="/assets/images/png/hero-right.png" alt="hero-right"
             class="w-[400px] h-[300px] max-xl:hidden absolute top-[30%] right-0 z-10 pointer-events-none">
     </section>
