--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <div class="px-3">
         <div
-            class="max-w-[644px] mx-auto bg-gradient-to-b from-black to-gray rounded-[86px] flex items-center max-sm:pr-3 max-sm:pl-2 max-md:py-2 pr-[58px] pl-[11px] py-[11px] justify-between border-2 border-black fixed top-3 z-50 left-1/2 -translate-x-1/2 max-sm:max-w-[350px] w-full">
+            class="max-w-[644px] mx-auto bg-gradient-to-b from-black to-gray rounded-[86px] flex items-center max-sm:pr-3 max-sm:pl-2 max-md:py-2 pr-[58px] pl-[11px] py-[11px] justify-between border-2 border-black fixed bottom-3 z-50 left-1/2 -translate-x-1/2 max-sm:max-w-[350px] w-full">
             <a href="/" class="flex items-center justify-center bg-white rounded-full size-[65px] max-sm:size-9"><img
                     src="/assets/images/png/favicon.png" alt="favicon"
                     class="pointer-events-none h-11 w-[42px] max-sm:size-7"></a>
