--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,7 @@
 
     <!-- footer -->
 
-    <footer class="pt-[250px] pb-[263px] max-lg:py-20 max-md:py-12 px-4">
+    <footer class="pt-[250px] pb-[263px] max-lg:pt-20 max-lg:pb-40 max-md:pt-12 max-md:pb-32 max-sm:pb-24 px-4">
         <a href="/"
             class="font-bold text-[103px] max-lg:text-[80px] max-md:text-6xl max-sm:text-4xl leading-[82px] max-lg:leading-[100%] max-w-max mx-auto flex">Floatingworld
             Inc.™ </a>
