--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@
 
     <!-- faq -->
 
-    <section>
+    <section id="faq">
         <div class="max-w-[1522px] mx-auto px-4">
             <div class="flex justify-between items-start gap-6 max-lg:flex-wrap">
                 <div class="accordion w-[600px] max-lg:w-full flex flex-col gap-6 max-md:gap-4">
